--- a/conf/application.conf
+++ b/conf/application.conf
@@ -30,5 +30,8 @@ cpo.from="file://codepointopen/?move=done"
 
 mongodb.uri ="mongodb://localhost:27017/mapmailer"
 
-capsulecrm.url="https://ACME.capsulecrm.com"
-capsulecrm.token="yours"
+# Capsule CRM
+# ~~~~~
+
+#capsulecrm.url="https://acme.capsulecrm.com"
+#capsulecrm.token="acme123"
