--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,5 +33,5 @@ mongodb.uri ="mongodb://localhost:27017/mapmailer"
 # Capsule CRM
 # ~~~~~
 
-#capsulecrm.url="https://coen.capsulecrm.com"
-#capsulecrm.token="a837f9dbaaf26c2e0b7d1f75fc44645f"
+#capsulecrm.url="https://acme.capsulecrm.com"
+#capsulecrm.token="abc123"
