Config changes. Email in blank target. [ci skip]

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -28,7 +28,22 @@ logger.application=DEBUG
 # From where should we pickup CodePoint Open CSV files
 cpo.from="file://codepointopen/?move=done"
 
-mongodb.uri ="mongodb://localhost:27017/mapmailer"
+mongodb.uri="mongodb://localhost:27017/mapmailer"
+
+# dropbox for CRM email storage
+bcc="dropbox@22156424.coen.capsulecrm.com"
+
+# CRM contact groups
+groups {
+    # groups that should not be displayed
+    ignore=["Amber", "Green", "No longer in teaching", "PGCE"]
+
+    # contacts in these groups are not imported
+    skipImport=["Red", "Non-Contactable"]
+
+    # group that should be collapsed - ignores case
+    collapseIfContains=["ast", "english", "spanish", "french", "chemistry", "maths", "media", "science", "business", "ict", "mfl", "physics"]
+}
 
 # Capsule CRM
 # ~~~~~
