[ci skip] support Circle, further work

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -30,8 +30,12 @@ cpo.from="file://codepointopen/?move=done"
 
 mongodb.uri="mongodb://localhost:27017/mapmailer"
 
-# dropbox for CRM email storage
-bcc="dropbox@22156424.coen.capsulecrm.com"
+crm {
+    url="https://coen.capsulecrm.com/party/"
+
+    # dropbox for CRM email storage
+    bcc="dropbox@22156424.coen.capsulecrm.com"
+}
 
 # CRM contact groups
 groups {
@@ -42,7 +46,7 @@ groups {
     skipImport=["Red", "Non-Contactable"]
 
     # group that should be collapsed - ignores case
-    collapseIfContains=["ast", "english", "spanish", "french", "chemistry", "maths", "media", "science", "business", "ict", "mfl", "physics"]
+    collapseIfContains=["ast", "head", "technology", "design", "english", "spanish", "french", "chemistry", "maths", "media", "science", "business", "ict", "mfl", "physics"]
 }
 
 # Capsule CRM
