WIP. Added rate limiting, email, ping.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -25,8 +25,11 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+# HTTP Response headers control for static files: 12 hours
+http.cacheControl=43200
+
 # From where should we pickup CodePoint Open CSV files
-cpo.from="file://codepointopen/?move=done"
+cpo.from="file://codepointopen/?include=.*.csv&move=done"
 
 mongodb.uri="mongodb://localhost:27017/mapmailer"
 
@@ -54,3 +57,8 @@ groups {
 
 #capsulecrm.url="https://acme.capsulecrm.com"
 #capsulecrm.token="abc123"
+
+# SMTP
+# ~~~~
+
+smtp.host = localhost
