--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
-language: java
+language: scala
 env:
-  - PLAY_VERSION="2.2.2" # Latest 2.x
+  - PLAY_VERSION="2.2.2"
 before_script:
   - wget http://downloads.typesafe.com/play/${PLAY_VERSION}/play-${PLAY_VERSION}.zip
   - unzip -q play-${PLAY_VERSION}.zip
-script: play-${PLAY_VERSION}/play package
+script: play-${PLAY_VERSION}/play assembly
