--- a/conf/application.conf
+++ b/conf/application.conf
@@ -25,8 +25,8 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
-# HTTP Response headers control for static files: 12 hours
-http.cacheControl=43200
+# HTTP Response headers control for static files: 30 days
+assets.defaultCache="max-age=2592000"
 
 # From where should we pickup CodePoint Open CSV files
 cpo.from="file://codepointopen/?include=.*.csv&move=done"
