README. [ci skip]

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -31,6 +31,7 @@ assets.defaultCache="max-age=2592000"
 # From where should we pickup CodePoint Open CSV files
 cpo.from="file://codepointopen/?include=.*.csv&move=done"
 
+# MongoDB database to connect to
 mongodb.uri="mongodb://localhost:27017/mapmailer"
 
 crm {
@@ -49,7 +50,7 @@ groups {
     skipImport=["Red", "Non-Contactable"]
 
     # group that should be collapsed - ignores case
-    collapseIfContains=["ast", "head", "technology", "design", "english", "spanish", "french", "chemistry", "maths", "media", "science", "business", "ict", "mfl", "physics"]
+    collapseIfContains=["ast", "head", "technology", "design", "english", "spanish", "french", "chemistry", "japanese", "maths", "media", "science", "business", "ict", "mfl", "physics"]
 }
 
 # Capsule CRM
@@ -57,8 +58,3 @@ groups {
 
 #capsulecrm.url="https://acme.capsulecrm.com"
 #capsulecrm.token="abc123"
-
-# SMTP
-# ~~~~
-
-smtp.host = localhost
