Added tests. Improved the build. Now import last modified parties every 5 mins.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -56,5 +56,7 @@ groups {
 # Capsule CRM
 # ~~~~~
 
-#capsulecrm.url="https://acme.capsulecrm.com"
-#capsulecrm.token="abc123"
+capsulecrm {
+    #url="https://acme.capsulecrm.com"
+    #token="abc123"
+}
