--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,5 @@ env:
 before_script:
   - wget http://downloads.typesafe.com/play/${PLAY_VERSION}/play-${PLAY_VERSION}.zip
   - unzip -q play-${PLAY_VERSION}.zip
-script: play-${PLAY_VERSION}/play assembly
+script:
+  - play-${PLAY_VERSION}/play assembly
