--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,29 +34,38 @@ cpo.from="file://codepointopen/?include=.*.csv&move=done"
 # MongoDB database to connect to
 mongodb.uri="mongodb://localhost:27017/mapmailer"
 
-crm {
-    url="https://coen.capsulecrm.com/party/"
+# Icons, see http://fontawesome.io/
+icons {
+  organisation="fa-institution"
+  person="fa-user"
+  focus="fa-bullseye"
+}
 
-    # dropbox for CRM email storage
-    bcc="dropbox@22156424.coen.capsulecrm.com"
+crm {
+  url="https://coen.capsulecrm.com/party/"
+  url=${?MAPMAILER_CRM_URL}
+
+  # dropbox for CRM email storage
+  bcc="dropbox@22156424.coen.capsulecrm.com"
+  bcc=${?MAPMAILER_CRM_BCC}
 }
 
 # CRM contact groups
 groups {
-    # groups that should not be displayed
-    ignore=["Amber", "Green", "No longer in teaching", "PGCE"]
+  # groups that should not be displayed
+  ignore=["Amber", "Green", "No longer in teaching", "PGCE"]
 
-    # contacts in these groups are not imported
-    skipImport=["Red", "Non-Contactable"]
+  # contacts in these groups are not imported
+  skipImport=["Red", "Non-Contactable"]
 
-    # group that should be collapsed - ignores case
-    collapseIfContains=["ast", "head", "technology", "design", "english", "spanish", "french", "chemistry", "japanese", "maths", "media", "science", "business", "ict", "mfl", "physics"]
+  # group that should be collapsed - ignores case
+  collapseIfContains=["ast", "head", "technology", "design", "english", "spanish", "french", "chemistry", "japanese", "maths", "media", "science", "business", "ict", "mfl", "physics"]
 }
 
 # Capsule CRM
 # ~~~~~
 
 capsulecrm {
-    #url="https://acme.capsulecrm.com"
-    #token="abc123"
+  url=${?MAPMAILER_CAPSULE_CRM_URL}
+  token=${?MAPMAILER_CAPSULE_CRM_TOKEN}
 }
