--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: scala
-services: mongodb
-env:
-  - PLAY_VERSION="2.3.2"
-before_script:
-  - wget http://downloads.typesafe.com/play/${PLAY_VERSION}/play-${PLAY_VERSION}.zip
-  - unzip -q play-${PLAY_VERSION}.zip
+sudo: false
 script:
-  - play-${PLAY_VERSION}/play assembly
+  - sbt ++$TRAVIS_SCALA_VERSION assembly
+services:
+  - mongodb
+scala:
+  - 2.10.4
+jdk:
+  - oraclejdk8
