--- a/conf/application.conf
+++ b/conf/application.conf
@@ -52,11 +52,8 @@ crm {
 
 # CRM contact groups
 groups {
-  # groups that should not be displayed
-  ignore=["Amber", "Green", "No longer in teaching", "PGCE"]
-
   # contacts in these groups are not imported
-  skipImport=["Red", "Non-Contactable"]
+  skipImport=["Red", "Non-Contactable", "No longer in teaching", "Taking a break from teaching Jan 2012."]
 
   # group that should be collapsed - ignores case
   collapseIfContains=["ast", "head", "technology", "design", "english", "spanish", "french", "chemistry", "japanese", "maths", "media", "science", "business", "ict", "mfl", "physics"]
