--- a/conf/application.conf
+++ b/conf/application.conf
@@ -23,7 +23,7 @@ logger.root=ERROR
 logger.play=INFO
 
 # Logger provided to your application:
-logger.application=DEBUG
+logger.application=INFO
 
 # HTTP Response headers control for static files: 30 days
 assets.defaultCache="max-age=2592000"
